--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -13,8 +13,8 @@ export const prerender = true
 ---
 
 <BaseLayout
-  title="Nano Fighters Club"
-  description="Experience Excellence in Boxing and Kickboxing with Personalized In-Home Training, Designed to Fit Your Pace and Goals."
+  title="Nano Fighters Club in Marbella"
+  description="Experience Excellence in Boxing and Kickboxing with Personalized In-Home Training in Marbella"
 >
   <Hero />
   <About />
