--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -13,8 +13,8 @@ export const prerender = true
 ---
 
 <BaseLayout
-  title="Nano Fighters Club"
-  description="Experimenta la Excelencia en Boxeo y Kickboxing con Entrenamiento Personalizado a Domicilio, Diseñado para Adaptarse a Tu Ritmo y Objetivos."
+  title="Nano Fighters Club en Marbella"
+  description="Experimenta la Excelencia en Boxeo y Kickboxing con Entrenamiento Personalizado a Domicilio en Marbella"
 >
   <Hero />
   <About />
