--- a/src/pages/en/booking.astro
+++ b/src/pages/en/booking.astro
@@ -48,5 +48,8 @@ export const prerender = true
       </div>
       <BookingForm client:load lang={lang} />
     </div>
+    <p class='md:px-10 px-5'>
+  Fill in all the required fields of the form with the necessary information to ensure that we can assist you in the best possible way. By completing your reservation through our form, we guarantee you a completely free first class!
+</p>
   </section>
 </BaseLayout>
