--- a/src/pages/es/booking.astro
+++ b/src/pages/es/booking.astro
@@ -5,6 +5,8 @@ import { BookingForm } from '../../components/react/BookingForm'
 import { contacts } from '../../constants'
 import Header from '../../components/layout/Header.astro'
 
+import { Toaster } from '../../components/ui/toaster'
+
 // Translation Imports
 import { getLangFromUrl, useTranslations } from '../../i18n/utils'
 const lang = getLangFromUrl(Astro.url)
@@ -18,6 +20,7 @@ export const prerender = true
   title="Nano Fighters Club in Marbella"
   description="Experience Excellence in Boxing and Kickboxing with Personalized In-Home Training in Marbella"
 >
+  <Toaster client:load />
   <section
     class="m-auto mt-10 flex max-w-[1400px] flex-col items-center justify-center gap-5 p-5 md:gap-10 md:p-10"
   >
@@ -25,7 +28,7 @@ export const prerender = true
       <Header
         title="Formulario Reserva"
         subtitle="Puedes reservar una clase en el"
-      />
+      />   
     </div>
     <div
       class="flex w-full flex-col-reverse items-center justify-between gap-5 md:flex-row md:gap-0"
@@ -51,5 +54,11 @@ export const prerender = true
       </div>
       <BookingForm client:load lang={lang} />
     </div>
+    <p class='md:px-10 px-5'>
+        Llena todos los campos obligatorios del formulario con la información
+        necesaria para asegurarnos de que podamos atenderte de la mejor manera
+        posible. al completar tu reserva a través de nuestro formulario, te
+        garantizamos una primera clase ¡totalmente gratis!
+      </p>
   </section>
 </BaseLayout>
