feat: Add Esentials

--- a/src/components/Entrenamientos.astro
+++ b/src/components/Entrenamientos.astro
@@ -24,8 +24,8 @@ const t = useTranslations(lang)
   >
     <!-- Services List -->
     {
-      services.map(({ title, description, image, info, precio }) => (
-        <TrainingCard {title} {description} {image} {info} {precio} />
+      services.map(({ title, description, image, info, price }) => (
+        <TrainingCard {title} {description} {image} {info} {price} />
       ))
     }
   </div>
