refactor: fix some issues in content and links, Add more feed

--- a/src/components/Feed.astro
+++ b/src/components/Feed.astro
@@ -32,8 +32,7 @@ const t = useTranslations(lang)
             <Image
               src={item.image}
               alt={item.label}
-              width={300}
-              class="h-full w-full overflow-hidden rounded-xl object-cover transition duration-300 group-hover:-translate-y-2 group-hover:shadow-xl"
+              class="h-[400px] w-[250px] overflow-hidden rounded-xl object-cover transition duration-300 group-hover:-translate-y-2 group-hover:shadow-xl"
             />
           </a>
         </li>
