Add Pagination to the blog Index

--- a/src/pages/es/blog/[...page].astro
+++ b/src/pages/es/blog/[...page].astro
@@ -4,16 +4,20 @@ import BaseLayout from '../../../layouts/BaseLayout.astro'
 import BlogCard from '../../../components/blog/BlogCard.astro'
 import BlogHeader from '../../../components/blog/BlogHeader.astro'
 import { type CollectionEntry } from 'astro:content'
+import { type Page } from '../../../types'
 
 // Import Utils
 import { getPosts } from '../../../lib/fetchers'
 
-// Translation Imports
-import { getLangFromUrl } from '../../../i18n/utils'
-const lang = getLangFromUrl(Astro.url)
+export async function getStaticPaths({ paginate }) {
+  // Get all Posts
+  const posts: CollectionEntry<'blog'> = await getPosts('es')
 
-// Get all Posts
-const posts: CollectionEntry<'blog'> = await getPosts(lang)
+  console.log(posts)
+  return paginate(posts, { pageSize: 6 })
+}
+
+const { page }: { page: Page<CollectionEntry<'blog'>> } = Astro.props
 
 // create static page instead of SSR
 export const prerender = true
@@ -29,7 +33,11 @@ export const prerender = true
     <div
       class="lg:gap mb-5 grid grid-cols-1 gap-x-6 gap-y-9 px-5 md:grid-cols-2 md:gap-y-11 md:px-0 lg:grid-cols-3 lg:gap-x-8"
     >
-      {posts.map((post) => <BlogCard post={post} />)}
+      {page.data.map((post) => <BlogCard post={post} />)}
+    </div>
+    <div class="flex h-16 w-full items-center justify-center">
+      {page.url.prev ? <a href={page.url.prev}>{`< Anterior`}</a> : null}
+      {page.url.next ? <a href={page.url.next}>{`Siguiente >`}</a> : null}
     </div>
   </section>
 </BaseLayout>
