feat: Add pagination to Post Page and Categories Page

--- a/src/components/blog/BlogHeader.astro
+++ b/src/components/blog/BlogHeader.astro
@@ -57,7 +57,7 @@ const { category } = Astro.params
             <li class="flex-shrink-0 snap-start">
               <a
                 title={`Category - ${item}`}
-                href={`/${lang}/categories/${item}`}
+                href={`/${lang}/${item}`}
                 class={cn(
                   'capitalize',
                   item === category ? 'select-none' : '',
