--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -49,5 +49,10 @@ const lang = getLangFromUrl(Astro.url)
       </main>
       <Footer />
     </div>
+    <style>
+      html {
+        scrollbar-color: #f64646 #020817;
+      }
+    </style>
   </body>
 </html>
