--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,4 @@
 ---
-// Vercel Imports
-import { Analytics } from '@vercel/analytics/react'
-import SpeedInsights from '@vercel/speed-insights/astro'
-
 // Astro Imports - Components & Globas
 import HeadSEO from '../components/layout/HeadSEO.astro'
 import Footer from '../components/layout/Footer.astro'
@@ -36,22 +32,20 @@ const lang = getLangFromUrl(Astro.url)
       post={post}
     />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
+  <body class='min-h-screen bg-background font-sans antialiased'>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-WVVRPDML"
-        height="0"
-        width="0"
-        style="display:none;visibility:hidden"></iframe></noscript
+        src='https://www.googletagmanager.com/ns.html?id=GTM-WVVRPDML'
+        height='0'
+        width='0'
+        style='display:none;visibility:hidden'></iframe></noscript
     >
     <!-- End Google Tag Manager (noscript) -->
-    <Analytics client:load />
-    <SpeedInsights client:load />
 
-    <div class="relative flex min-h-screen flex-col">
+    <div class='relative flex min-h-screen flex-col'>
       <Navbar />
-      <main class="flex-auto">
+      <main class='flex-auto'>
         <slot />
       </main>
       <Footer />
