--- a/src/pages/es/blog/[...slug].astro
+++ b/src/pages/es/blog/[...slug].astro
@@ -28,7 +28,7 @@ const post = Astro.props
 const { title, date, excerpt, author, categories, image } = post.data
 
 // Astro Params
-const slug = Astro.params.slug
+const { slug } = Astro.params
 
 // Special function to render the content of the MD
 const { Content } = await post.render()
@@ -53,79 +53,72 @@ export const prerender = true
   description={excerpt}
   ogImage={image.src}
   url={Astro.url}
-  post={post}
->
-  <div class="container relative max-w-[1020px] py-10 pt-10">
+  post={post}>
+  <div class='container relative max-w-[1020px] py-10 pt-10'>
     <a
-      title="Back to the Blog"
-      href="/es/blog"
-      class="absolute left-[-150px] top-10 hidden items-center justify-center text-muted-foreground transition-colors duration-200 hover:text-secondary xl:flex"
-      transition:animate="slide"
-    >
-      <ChevronLeft height="20px" />
-       Todos los posts
+      title='Back to the Blog'
+      href='/es/blog'
+      class='absolute left-[-150px] top-10 hidden items-center justify-center text-muted-foreground transition-colors duration-200 hover:text-secondary xl:flex'
+      transition:animate='slide'>
+      <ChevronLeft height='20px' />
+      Todos los posts
     </a>
 
     <!-- Category List -->
     <article
-      class="prose max-w-none prose-headings:text-white prose-p:text-white/70 prose-strong:text-white prose-ul:text-white/50"
-    >
+      class='prose max-w-none prose-headings:text-white prose-p:text-white/70 prose-strong:text-white prose-ul:text-white/50'>
       {
         categories.map((category) => (
           <a
             title={`Category - ${category}`}
-            class="mr-3 rounded-lg bg-accent px-3 py-1 text-xs text-white no-underline transition-colors duration-200 hover:bg-accent/50 md:text-sm"
+            class='mr-3 rounded-lg bg-accent px-3 py-1 text-xs text-white no-underline transition-colors duration-200 hover:bg-accent/50 md:text-sm'
             href={`/es/categories/${category}`}
-            aria-label={`Categorie-link-${category}`}
-          >
+            aria-label={`Categorie-link-${category}`}>
             {capitalizer(category)}
           </a>
         ))
       }
       <!-- Image -->
       <Image
-        class="my-6 overflow-hidden rounded-xl"
+        class='my-6 overflow-hidden rounded-xl'
         width={1020}
         height={510}
         src={image}
         alt={title}
         transition:name={'img-' + slug}
-        loading="eager"
+        loading='eager'
       />
       <!-- Date and Author -->
-      <div class="flex items-center justify-between">
+      <div class='flex items-center justify-between'>
         <span
-          class="font-medium text-muted-foreground"
-          transition:name={'date-' + slug}
-        >
+          class='font-medium text-muted-foreground'
+          transition:name={'date-' + slug}>
           {formatDate(date)}
         </span>
-        <span class="font-medium text-muted-foreground">
+        <span class='font-medium text-muted-foreground'>
           {author}
         </span>
       </div>
       <!-- Title and description -->
-      <h1 class="font-heading my-4 text-4xl" transition:name={'title-' + slug}>
+      <h1 class='font-heading my-4 text-4xl' transition:name={'title-' + slug}>
         {title}
       </h1>
       <p>{excerpt}</p>
-      <hr class="my-6" />
+      <hr class='my-6' />
       <!-- Content -->
       <Content />
-      <hr class="my-6" />
-      <h4 class="mb-5 text-xl text-accent">Articulos Relacionados</h4>
+      <hr class='my-6' />
+      <h4 class='mb-5 text-xl text-accent'>Articulos Relacionados</h4>
       <!-- related posts -->
       <div
-        class="flex flex-col items-center justify-between gap-5 md:flex-row md:gap-0"
-      >
+        class='flex flex-col items-center justify-between gap-5 md:flex-row md:gap-0'>
         {
           relatedPosts.slice(0, 2).map((item) => (
             <a
               title={`Link to ${item.data.title}`}
-              class="text-secondary no-underline transition-colors duration-200 hover:text-secondary/70"
+              class='text-secondary no-underline transition-colors duration-200 hover:text-secondary/70'
               href={`/es/blog/${item.slug}`}
-              aria-label={`Related-link-${item.slug}`}
-            >
+              aria-label={`Related-link-${item.slug}`}>
               {item.data.title}
             </a>
           ))
